--- a/cap_2/estrutura_lexica.html
+++ b/cap_2/estrutura_lexica.html
@@ -7,9 +7,89 @@
 </head>
 <body>
     
-    <div>
-        <h1>Estrutura Léxica</h1>
-    </div>
-
+    <section>
+        <div>
+            <h1>1 - Estrutura Léxica</h1>
+            <p>É a sintaxe de nível mais baixo de uma linguagem.</p>
+        </div>
+        <div>
+            <div>
+                <h2>2 - Conjunto de caracteres</h2>
+                <p>Os programas javascript são escritos com o conjunto de carcteres <strong>Unicode</strong>.</p>
+            </div>
+            <div>
+                <h2>3 - Diferenciação de maiúsculas e minúsculas.</h2>
+                <p>JavaScript é uma linguagem que diferencia lestras Maiúsculas de Minúsculas</p>
+                <span>Devem ser sempre Minúsculas no JavaScript</span>
+            </div>
+            <div>
+                <h2>4 - Espaços em branco, quebras de linha e carcteres de controle de formato</h2>
+                <p>O JavaScript ignora os espaços que aparecem entre sinais em programas.</p>
+                <p>Também ignora quebra de linha.</p>
+            </div>
+            <div>
+                <h2>5 - Sequência de escape Unicode</h2>
+                <p>Alguns hardwares não possuem capacidade de serem introduzidos livremente em algumas máquinas. 
+                    Por conta disso, o JavaScript utiliza uma técnica para ajudar esses hardwares mais antigos a se comunicarem.
+                </p>
+            </div>
+            <div>
+                <h2>6 - Normalização</h2>
+                <p>O padrão Unicode define a codificação preferida para todos os caracteres e especifica um procedimento de normalização 
+                    para converter texto em forma canônica conveniente para comparações.
+                </p>
+                <span>javascript presume que o código-fonte que está interpretando já foi normalizado e 
+                    não tenta normalizar indentificadores, string nem expressões regulares.
+                </span>
+            </div>
+            <div>
+                <h2>7 - Comentários</h2>
+                <p>
+                    // <= Esse é um comentário de uma linha.
+                </p>
+                <p>
+                    /* <= Assim também.
+                </p>
+                <p>
+                    /**/ <= Esse e um comentário de varias linhas.
+                </p>
+            </div>
+            <div>
+                <h2>8 - Literais</h2>
+                <p>
+                    Um literal é um valor de dados que aparece diretamente em um programa.
+                </p>
+            </div>
+            <div>
+                <h2>9 - Indentificadores e palavras reservadas</h2>
+                <p>
+                    Um indentificador é simplesmente um nome.
+                </p>
+            </div>
+            <div>
+                <h2>10 - Palavras reservadas</h2>
+                <p>
+                    Javascript reserva vários identificadores como palavras-chave da própria linguagem, como:
+                </p>
+                <span>
+                    break | case | catch | continue | debugger | default | delete | do | else | false | finally | for | function | if | in | instanceof | new | null | return | swith | this | throw | true | try | typeof | var | void | while | with 
+                </span>
+                <h3>Podem passar a ser:</h3>
+                <span>
+                    class | const | enum |  export | extends | import | super 
+                </span>]
+                <h3>Reservadas no modo restrito:</h3>
+                <span>
+                    implements | interface | let | package | private | protected | public | static | yield
+                </span>
+            </div>
+            <div>
+                <h2>11 - Pontos e vírgulas opcionais</h2>
+                <p>
+                    sempre use, mesmo que não seja necessário.
+                </p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
