--- a/cap_2/estrutura_lexica.html
+++ b/cap_2/estrutura_lexica.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style_cap2.css">
     <title>Estrutura Léxica</title>
 </head>
 <body>
     
     <section>
+        
         <div>
-            <h1>1 - Estrutura Léxica</h1>
-            <p>É a sintaxe de nível mais baixo de uma linguagem.</p>
-        </div>
-        <div>
+            <div>
+                <h1>1 - Estrutura Léxica</h1>
+                <p>É a sintaxe de nível mais baixo de uma linguagem.</p>
+            </div>
             <div>
                 <h2>2 - Conjunto de caracteres</h2>
                 <p>Os programas javascript são escritos com o conjunto de carcteres <strong>Unicode</strong>.</p>
@@ -77,7 +79,7 @@
                 <h3>Podem passar a ser:</h3>
                 <span>
                     class | const | enum |  export | extends | import | super 
-                </span>]
+                </span>
                 <h3>Reservadas no modo restrito:</h3>
                 <span>
                     implements | interface | let | package | private | protected | public | static | yield
